# firefly-receipt-scanner

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  app.py  firefly.py  image_utils.py  models.py  receipt_processing.py
app/static/: manifest.json
app/static/css/: styles.css
app/static/js/: camera.js
app/templates/: base.html  error.html  login.html  review.html  upload.html
